clusters/home/apps/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/assistant)$ $1/ redirect;
spec:
  rules:
  - host: home.fritz.box
    http:
      paths:
      - path: /assistant(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port:
              number: 8080
